<resources>
    <string name="app_name">Doubletapp Habit Tracker</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="habit">Привычка</string>
    <string name="create_habit_label">Создать привычку</string>
    <string name="edit_habit_label">Редактировать привычку</string>

    <string name="habit_title_placeholder">Новая привычка</string>

    <string name="description">Описание</string>
    <string name="description_hint">Введите описание…</string>

    <string name="habit_priority">Приоритет</string>
    <string-array name="habit_priorities">
        <item>Низкий</item>
        <item>Средний</item>
        <item>Высокий</item>
    </string-array>

    <string name="habit_type">Тип</string>
    <string name="habit_type_1">Хорошая</string>
    <string name="habit_type_2">Плохая</string>

    <string name="habit_type_1_plural">Хорошие</string>
    <string name="habit_type_2_plural">Плохие</string>

    <string name="habit_period">Периодичность</string>
    <string name="times_in">раз в</string>
    <string name="days">дней</string>

    <string name="save">Сохранить</string>

    <string name="habit_list_fragment_label">Привычки</string>
    <string name="info_fragment_label">О приложении</string>

    <string name="title_activity_main_drawer">MainDrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>